@startuml class_create_reward_request
title Class Diagram - POST /api/rewards/requests (Tạo yêu cầu đổi quà)

skinparam classAttributeIconSize 0

package "controller" {
    class RewardRequestController {
        - rewardRequestService : IRewardRequestService
        + createRequest(request: CreateRewardRequestDto) : ResponseEntity<ResponseDto<RewardRequestResponse>>
    }
}

package "service" {
    interface IRewardRequestService {
        + createRequest(dto: CreateRewardRequestDto) : RewardRequestResponse
    }

    class RewardRequestServiceImpl implements IRewardRequestService {
        - rewardRequestRepository : RewardRequestRepository
        - rewardRepository : RewardRepository
        - studentRepository : StudentRepository
        - parentRepository : ParentRepository
        - studentParentLinkRepository : StudentParentLinkRepository
        - coinTransactionRepository : CoinTransactionRepository
        - eventPublisher : ApplicationEventPublisher
        + createRequest(dto: CreateRewardRequestDto) : RewardRequestResponse
        - deductCoins(student: Student, amount: BigDecimal, ...) : void
        - reserveStock(reward: Reward, quantity: int) : void
        - generateRequestCode() : String
    }
}

package "dto.request" {
    class CreateRewardRequestDto {
        - rewardId : UUID <<@NotNull>>
        - quantity : int (default 1)
        - notes : String
        - studentId : UUID (parent only)
    }
}

package "dto.response" {
    class RewardRequestResponse {
        - id : UUID
        - requestCode : String
        - studentName : String
        - rewardName : String
        - quantity : int
        - totalCoins : BigDecimal
        - status : RewardRequestStatus
        - createdAt : LocalDateTime
    }
}

package "entity" {
    class RewardRequest extends BaseEntity {
        - requestCode : String
        - student : Student
        - reward : Reward
        - school : School
        - requestedByParent : Parent
        - quantity : Integer
        - totalCoins : BigDecimal
        - status : RewardRequestStatus
    }

    class CoinTransaction extends BaseEntity {
        - student : Student
        - transactionType : TransactionType
        - amount : BigDecimal
        - balanceBefore : BigDecimal
        - balanceAfter : BigDecimal
        - referenceType : String
        - referenceId : UUID
    }

    class Reward extends BaseEntity {
        - coinCost : BigDecimal
        - stockQuantity : Integer
        - isUnlimited : Boolean
    }
}

RewardRequestController --> IRewardRequestService : uses
RewardRequest --> Reward : reward
RewardRequest --> Student : student
RewardRequest --> School : school

@enduml
